--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 
 
 
-<meta http-equiv="refresh" content="2;URL=https://mthmaze.github.io/edit">
+<meta http-equiv="refresh" content="2;URL=https://youtube.com/shorts/m38t8MZUmjo">
